<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_example">

    <fragment
        android:id="@+id/nav_example"
        android:name="com.arima.inventario.fragments.ExampleFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_example" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.arima.inventario.fragments.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/edit_product"
        android:name="com.arima.inventario.fragments.EditarProductoFragment"
        android:label="Editar"
        tools:layout="@layout/edit_product" />

    <fragment
        android:id="@+id/add_product"
        android:name="com.arima.inventario.fragments.AgregarProductoFragment"
        android:label="@string/menu_add_product"
        tools:layout="@layout/add_product" />
</navigation>