<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondologin"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/label_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/login_email"
            android:textColor="@color/colorWhite"
            android:text="@string/login_label_email" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorStartButton"
            android:textColorHighlight="@color/colorWhite"
            android:textColorHint="@color/colorStartButton"
            android:textColorLink="@color/colorWhite"
            android:backgroundTint="@color/colorStartButton"
            android:textCursorDrawable="@color/colorStartButton" />

        <TextView
            android:id="@+id/label_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@id/login_password"
            android:textColor="@color/colorWhite"
            android:text="@string/login_label_password" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorStartButton"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColorHighlight="@color/colorWhite"
                android:textColorLink="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/show_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/fondologin"
                android:onClick="showPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/login_password"
                app:srcCompat="@android:drawable/ic_menu_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/login_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/btn_uno"
            android:onClick="login"
            android:text="@string/login_ok"
            android:textColor="@drawable/txt_btn_uno" />

        <Button
            android:id="@+id/login_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_uno"
            android:onClick="create"
            android:text="@string/login_create"
            android:textColor="@drawable/txt_btn_uno" />

        <TextView
            android:id="@+id/label_recover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="recover"
            android:text="@string/login_link_recover"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="267dp"
        android:layout_height="112dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186"
        app:srcCompat="@drawable/check" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="188dp"
        android:layout_height="85dp"
        android:lineSpacingExtra="12sp"
        android:text="CHECK"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

</androidx.constraintlayout.widget.ConstraintLayout>